# HyperNOs

./: .gitattributes  .gitignore  GEMINI.md  README.md  SLURM_USAGE.md  download_data.py  download_data.sh  download_model.sh  download_trained_model.sh  print_last_line.sh  pyproject.toml  requirements.txt  rm_empty_dirs.sh  template.slurm  tutorial_ray.ipynb  tutorial_train.ipynb
.github/workflows/: publish.yml
hypernos/: datasets.py  loss_fun.py  loss_fun_with_physics.py  train.py  tune.py
hypernos/architectures/: __init__.py
hypernos/cli/: convergence_plot.py  convergence_plot_comparison.py  main_raytune.py  main_singlerun.py  multiple_output_statistics.py  plot_dataset.py  plot_loss.py  recover_model.py  recover_model_plot.py  save_onnx.py  utilities_recover_model.py
hypernos/examples/: __init__.py  model_problem_code.py  ray_cno.py  ray_cno_multiple_datasets.py  ray_don.py  ray_fno.py  ray_fno_multiple_datasets.py  ray_fno_multiple_resolutions.py  ray_gfno.py  ray_iganet_transformer.py  ray_model_problem.py  ray_mp_afieti_transformer.py  ray_resnet.py  ray_samedof_cno.py  ray_samedof_fno.py  train_cno.py  train_don.py  train_fno.py  train_fno_onnx.py  train_fno_with_memory_analysis.py  train_fno_with_phys.py  train_gfno.py  train_iganet_transformer.py  train_mp_afieti_transformer.py  train_res_cnn.py  train_resnet.py  train_samedof_cno.py  train_samedof_fno.py
hypernos/fno_matlab/: export_fno_to_mat.py  test_fft_matlab.m  test_fft_pytorch.py
hypernos/pytest/: test_bampno.py  test_bampno_synthesis_analysis.py  test_chebyshev_utilities.py  test_cnn2d.py  test_cnn2d_branch_network.py  test_cnn2d_residual_network.py  test_cno.py  test_datasets.py  test_deeponet.py  test_feedforward_network.py  test_fno.py  test_gfno.py  test_iganet_transformer.py  test_iganet_transformer_mp_afieti.py  test_lazy_kernel_save_load.py  test_loss_fun.py  test_loss_fun_with_physics.py  test_residualnetwork.py  test_utilities.py
hypernos/wrappers/: BAMPNO_Continuation_Wrapper.py  DeepONetWrapper.py  DeepXDEMIONetWrapper.py  OTNOWrapper.py  RNOWrapper.py  StiffnessMatrixWrapper.py  wrap_model.py
neural_operators/: Loss_fun.py  Loss_fun_physics.py  __init__.py  data_benchmarks.py  datasets.py  loss_fun.py  loss_fun_with_physics.py  main_cno.py  main_don.py  main_fno.py  main_raytune.py  main_refactored.py  main_singlerun.py  recover_model.py  test_loss_fun.py  train.py  train_fun.py  tune.py  utilities.py  utilities_plot.py
neural_operators/CNO/: CNO.py  CNO_1d.py  CNO_2d.py  CNO_benchmarks.py  CNO_utilities.py  __init__.py  train_CNO_1d.py  train_CNO_2d.py
neural_operators/FNO/: FNO.py  FNO_1d.py  FNO_2d.py  FNO_ONNX.py  FNO_arc.py  FNO_benchmarks.py  FNO_utilities.py  FNObenchmarks.py  __init__.py
neural_operators/RationalNN/: RationalNN_utilities.py  __init__.py
neural_operators/ResNet/: ResNet_utilities.py  ResidualNetwork.py  __init__.py
neural_operators/architectures/: README.md  __init__.py
neural_operators/cli/: README.md  __init__.py  convergence_plot.py  convergence_plot_comparison.py  export_fno_to_mat.py  fno_inference.m  main_raytune.py  main_singlerun.py  multiple_output_statistics.py  plot_error_distribution.py  plot_loss.py  plot_loss_fun.py  plot_wall_time_loss.py  recover_model.py  recover_model_plot.py  save_onnx.py  train_fun.py  utilities_plot.py  utilities_recover_model.py
neural_operators/examples/: README.md  __init__.py  example_cno.py  example_fno.py  example_fno_multiple_datasets.py  example_same_dof_fno.py  main_cno.py  main_don.py  main_fno.py  main_sample.py  model_problem_code.py  ray_bampno.py  ray_cno.py  ray_cno_multiple_datasets.py  ray_don.py  ray_fno.py  ray_fno_multiple_datasets.py  ray_fno_multiple_resolutions.py  ray_gfno.py  ray_iganet_transformer.py  ray_model_problem.py  ray_resnet.py  ray_same_dof_cno.py  ray_same_dof_fno.py  ray_samedof_bampno.py  ray_samedof_cno.py  ray_samedof_fno.py  ray_tfno_neuralop.py  train_bampno.py  train_bampno_parallel.py  train_cno.py  train_don.py  train_fno.py  train_fno_lin.py  train_fno_onnx.py  train_fno_with_phys.py  train_fnogno.py  train_gfno.py  train_gino.py  (+11 more)
notebook/: tutorial_ray.ipynb  tutorial_train.ipynb
(+689 files in other folders)
